@@ -1,18 +1,13 @@
 Package: OpenMx
 Version: 0.2.3-1006
 Title: The OpenMx Statistical Modeling Package
-Author: Steven Boker, Michael Neale, Hermine Maes, Paras Metah,
-	Sarah Kenny, Timothy Bates, Ryne Estabrook, Jeffrey Spies, Timothy Brick, Michael Spiegel
+Author: Steven Boker, Michael Neale, Hermine Maes, Paras Metah, Sarah Kenny, Timothy Bates, Ryne Estabrook, Jeffrey Spies, Timothy Brick, Michael Spiegel
 Maintainer: OpenMx Development Team <openmx-developers@list.mail.virginia.edu>
 URL: http://openmx.psyc.virginia.edu
-Description: The OpenMx Project intends to rewrite and extend the
- popular statistical package Mx to address the challenges facing
- a large range of modern statistical problems such as: the difficulty of measuring behavioral traits; the availability of technologies - such as such as magnetic resonance imaging, continuous physiological monitoring and microarrays
- - which generate extremely large amounts of data often with complex
- time-dependent patterning; and increased sophistication in the statistical models used to analyze the data. 
+Description: The OpenMx Project intends to rewrite and extend the popular statistical package Mx to address the challenges facing a large range of modern statistical problems such as: the difficulty of measuring behavioral traits; the availability of technologies - such as such as magnetic resonance imaging, continuous physiological monitoring and microarrays - which generate extremely large amounts of data often with complex time-dependent patterning; and increased sophistication in the statistical models used to analyze the data.
 License: Apache License 2.0
 Depends: methods
 Suggests: snowfall
 LazyLoad: yes
 LazyData: yes
-Collate: MxData.R MxReservedNames.R MxNamespace.R MxUntitled.R MxCharOrNumber.R MxMatrixOperators.R MxMatrix.R DiagMatrix.R FullMatrix.R IdenMatrix.R LowerMatrix.R SdiagMatrix.R StandMatrix.R SymmMatrix.R UnitMatrix.R ZeroMatrix.R MxAlgebra.R MxCycleDetection.R MxAlgebraConvert.R MxSquareBracket.R MxEval.R MxPath.R MxObjectiveFunction.R MxBounds.R MxConstraint.R MxTypes.R MxModel.R MxRAMModel.R MxModelDisplay.R MxFlatModel.R MxMultiModel.R MxModelFunctions.R MxUnitTesting.R MxAlgebraObjective.R MxFIMLObjective.R MxMLObjective.R MxRAMObjective.R MxRObjective.R MxRun.R MxSummary.R MxSwift.R MxOptions.R MxThreshold.R OriginalMx.R MxGraph.R MxGraphviz.R MxVersion.R zzz.R
+Collate: MxData.R DefinitionVars.R MxReservedNames.R MxNamespace.R MxUntitled.R MxCharOrNumber.R MxMatrixOperators.R MxMatrix.R DiagMatrix.R FullMatrix.R IdenMatrix.R LowerMatrix.R SdiagMatrix.R StandMatrix.R SymmMatrix.R UnitMatrix.R ZeroMatrix.R MxAlgebra.R MxCycleDetection.R MxAlgebraConvert.R MxSquareBracket.R MxEval.R MxPath.R MxObjectiveFunction.R MxBounds.R MxConstraint.R MxTypes.R MxModel.R MxRAMModel.R MxModelDisplay.R MxFlatModel.R MxMultiModel.R MxModelFunctions.R MxUnitTesting.R MxAlgebraObjective.R MxFIMLObjective.R MxMLObjective.R MxRAMObjective.R MxRObjective.R MxRun.R MxSummary.R MxSwift.R MxOptions.R MxThreshold.R OriginalMx.R MxGraph.R MxGraphviz.R MxVersion.R zzz.R
